[package]
name = "genetic-drawing"
version = "0.1.0"
authors = ["beltegeuse <adrien.gruson@gmail.com>"]
edition = "2018"

[dependencies]
image = { version = "*", features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }
imageproc = "*"
rand = "*"
rayon = "*"